--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -1,39 +1,58 @@
-nav{
+header{
+
+    display: flex;
     width: 100%;
-    background-color: var(--LightCyans);
-    
-    .header{
-        display: flex;
-        justify-content: space-evenly;
-        flex-wrap: wrap;
-        width: 85%;
+
+    nav{
+        width: 100%;
+        background: var(--DarkCyans);
         
-        
-        .img{
-            width: 150px;
-            height: 100px;
-            background-color: transparent;
-        }
-        
-        ul{
+        .header{
             display: flex;
             justify-content: space-between;
-            align-items: center;
-            list-style: none;
-            gap: 10px;
-
-            li {
-                font-family: var(--para-font);
-                font-size: 18px;
-                font-weight: 400;
-                cursor: pointer;
+            flex-wrap: wrap;
+            width: 80%;
+            margin: 0 auto;
+            
+            
+            .img{
+                width: 150px;
+                height: 100px;
+                background-color: transparent;
             }
-
-            li:hover{
-                margin-bottom: 5px;
-                border-bottom: 2px solid black;
-                transition: 0.2s;
+            
+            ul{
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                list-style: none;
+                gap: 40px;
+    
+                li {
+                    font-family: var(--heading-font);
+                    font-size: 18px;
+                    font-weight: 400;
+                    color: var(--White-write);
+                    cursor: pointer;
+                }
+    
+                li:hover{
+                    margin-bottom: 5px;
+                    border-bottom: 2px solid var(--White-write);
+                    transition: 0.2s;
+                }
+    
+                .icone{
+                    color: var(--LightCyan);
+                }
             }
+        }
+    
+        .Linha_verde{
+            width: 100%;
+            height: 4px;
+            background: var(--LightCyan);
         }
     }
 }
+
