--- a/src/components/Skill/styles.module.scss
+++ b/src/components/Skill/styles.module.scss
@@ -1,21 +1,58 @@
 section {
-    width: 80%;
-    margin: 0 auto;
-    .img {
+    width: 100%;
+
+    .divSectionSkill{
+        width: 85%;
+        margin: 0 auto;
         display: flex;
-        width: 100%;
-        
-        ul{
-            display: flex;
-            justify-content: center;
-            align-items: center;
+        flex-direction: column;
+        align-items: center;
+        gap: 40px;
+
+        h2{
+            color: var(--White-write);
+        }
             
+            .ulImg{
+                display: flex;
+                justify-content: center;
+                flex-wrap: wrap;
+                width: 100%;
+                gap: 30px;
+    
+                .DivImg{
+                    width: 12rem;
+                    background: var(--Card-Tecnologies);
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    gap: 20px;
+                    border-bottom: 3px solid var(--LightCyan);
+                    border-radius: 12px 0 0 0;
+
+                    p{
+                        color: var(--LightCyan);
+                        margin-top: 10px;
+                        font-family: var(--heading-font);
+                        font-size: 22px;
+                        font-weight: 500;
+                    }
+
+                    .icons {
+                        width: 40px;
+                        height: 40px;
+                        color: var(--LightCyan);
+                        display: flex;
+                        justify-items: center;
+                        align-items: center;
+                        transition: 0.6s; 
+                        transition-timing-function: cubic-bezier(0.42, 0, 0.32, 0.64);
+                        margin-bottom: 10px;
+                    }
+
+            }
+                
         }
-        
-        img {
-            margin-right: 60px;
-            transition: 0.3s; 
-            transition-timing-function: cubic-bezier(0.42, 0, 0.32, 0.64);
-        }
+            
     }
 }
