--- a/src/styles/globalStyles.scss
+++ b/src/styles/globalStyles.scss
@@ -1,19 +1,24 @@
-@import url("https://fonts.googleapis.com/css2?family=Kanit:wght@400;500&family=Poppins&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 
 :root {
-    --LightCyan: #e2e2e2;
-    --LightCyans: #aeafac;
-    --StrongText: #122360;
+    --LightCyan: #15971b;
+    --DarkCyans: #13131F;
+    --StrongCyan: #0a5a0e;
+
+    --Card-Tecnologies: #212121;
+
+    --White-write: #F9F9F9;
+
+    --Cyan-write: #828282;
 
     --body-background: #0a192f;
     --main: #ccf381;
     --light-main: rgba(204, 243, 129, 0.8);
     --white: #ffffff;
     --light: rgba(255, 255, 255, 0.8);
-    --heading-font: "Kanit", sans-serif;
-    --para-font: "Poppins", sans-serif;
+    --heading-font: "DM Sans", sans-serif;
 }
 
 body {
-    background-color: var(--LightCyan);
+    background-color: var(--DarkCyans);
 }
