--- a/src/Footer/styles.module.scss
+++ b/src/Footer/styles.module.scss
@@ -1,68 +1,81 @@
-footer{
+.footer {
+    position: relative;
+    z-index: 2;
+    bottom: 0;
+    left: 0;
     width: 100%;
-    height: 400px;
+    height: 300px;
+    text-align: center;
+  }
 
-    h2{
-        text-align: center;
-        color: var(--White-write);
+  h2{
+    color: var(--White-write);
+    margin-bottom: 60px;
+  }
+  
+  .footer.show {
+    transform: translatex(0%);
+  }
+  
+  .innerFooter {
+    opacity: 0;
+    transform: translateX(-50%);
+    transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+    width: 60%;
+    margin: 0 auto;
+  }
+  
+  .footer.show .innerFooter {
+    opacity: 1;
+    transform: translateX(0%);
+  }
+  
+  .containerContato {
+    display: flex;
+    justify-content: space-around;
+  }
+  
+  .contato {
+    text-align: center;
+    padding: 10px;
+  
+    .divIconContato {
+      width: 65px;
+      height: 65px;
+      background: #2a2a2a;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 0 auto;
+      margin-bottom: 10px;
+  
+      .iconContato {
+        width: 40px;
+        height: 40px;
+        color: var(--LightCyan);
+      }
     }
-
-    .containerContato{
-        width: 70%;
-        margin: 0 auto;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-top: 100px;
-        margin-bottom: 40px;
-
-        .contato{
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-align: center;
-
-            .divIconContato{
-                width: 65px;
-                height: 65px;
-                background: var(--Card-Tecnologies);
-                border-radius: 50%;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                text-align: center;
-
-                .iconContato{
-                    width: 40px;
-                    height: 40px;
-                    color: var(--LightCyan);
-                }
-            }
-
-            a{
-                text-decoration: none;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                gap: 15px;
-            }
-
-            h4{
-                color: var(--White-write);
-            }     
-
-            p{
-                color: var(--Cyan-write);
-            }
-
-        }
+  
+    a {
+      text-decoration: none;
+      color: var(--White-write);
+      display: block;
     }
-
-    .disoriaBackFront{
-        width: 80%;
-        margin: 0 auto;
-        height: 2px;
-        background: var(--StrongCyan);
-        margin-top: 10px;
+  
+    h4 {
+      margin-bottom: 5px;
     }
-}
+  
+    p {
+      color: var(--Cyan-write);
+    }
+  }
+  
+  .disoriaBackFront {
+    height: 2px;
+    margin: 0 auto;
+    background: var(--LightCyan);
+    margin-top: 10px;
+  }
+  
