--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -2,6 +2,10 @@ header{
 
     display: flex;
     width: 100%;
+    position: fixed;
+    top: 0;
+    z-index: 1000;
+    transition: background-color 0.3s ease;
 
     nav{
         width: 100%;
@@ -51,7 +55,7 @@ header{
         .Linha_verde{
             width: 100%;
             height: 4px;
-            background: var(--LightCyan);
+            background: linear-gradient(-1855deg, var(--StrongCyan), var(--LightCyan));
         }
     }
 }
