--- a/src/components/Iam.jsx/styles.module.scss
+++ b/src/components/Iam.jsx/styles.module.scss
@@ -7,7 +7,7 @@ section{
         align-items: center;
         width: 80%;
         margin: 0 auto;
-        margin-top: 40px;
+        margin-top: 100px;
     
         .DivMe{
             display: flex;
@@ -35,12 +35,20 @@ section{
 
                 #buttonCV {
                     color: var(--White-write);
-                    background-color: var(--StrongCyan);
+                    background: linear-gradient(-1855deg, var(--StrongCyan), var(--LightCyan));
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    text-decoration: none;
                 }
 
                 #buttonContato{
                     color: var(--White-write);
                     background: var(--DarkCyans);
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    text-decoration: none;
                 }
             }
         }
