--- a/src/components/Portfolio/myProjects/styles.module.scss
+++ b/src/components/Portfolio/myProjects/styles.module.scss
@@ -1,8 +1,27 @@
 article {
+  position: relative;
+  z-index: 2;
+  bottom: 0;
+  left: 0;
+}
+  .article.animation {
+      transform: translatex(0%);
+  }
+
+  .article.animation .Container_FrontEnd {
+    opacity: 1;
+    transform: translateX(0%);
+  }
+
     .Container_FrontEnd {
         width: 85%;
         margin: 0 auto;
         margin-bottom: 40px;
+        opacity: 0;
+        transform: translateX(-50%);
+        transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+
+
     
         h3 {
             color: var(--Cyan-write);
@@ -230,4 +249,3 @@ article {
             }
         }
     }
-}
