--- a/src/ModalProjects/styles.module.scss
+++ b/src/ModalProjects/styles.module.scss
@@ -3,10 +3,13 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: rgba(0, 0, 0, 0.671); /* Fundo semi-transparente */
-    z-index: 1000; /* Ajuste conforme necessário */
+    background-color: rgba(0, 0, 0, 0.671);
+    z-index: 3000;
     width: 100%;
-    height: 100%;
+    height: 100vh;
+    max-width: 100%; /* Ajuste conforme necessário */
+ /* Para evitar que o modal exceda a altura da tela */
+    overflow-y: auto; /* Adiciona uma barra de rolagem se o conteúdo for maior que a altura do modal */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -15,14 +18,13 @@
         background-color: var(--DarkCyans);
         border-radius: 8px;
         width: 80%;
-        margin: 0 auto;
         padding: 20px;
-        max-height: 600px;
+        position: relative; /* Necessário para o botão de fechar */
 
         .closeButton {
             position: absolute;
-            top: 185px;
-            right: 170px;
+            top: 10px;
+            right: 10px;
             color: var(--White-write);
             background-color: transparent;
             border: none;
@@ -30,7 +32,8 @@
             font-size: 1.5rem;
             background: var(--Cyan-write);
             border-radius: 40px;
-          }
+            padding: 10px;
+        }
 
         .modalCenter {
             display: flex;
@@ -38,47 +41,48 @@
             align-items: center;
             width: 100%;
 
-            .left{
+            .left {
                 width: 55%;
+                flex: 1;
 
-                img{
+                img {
                     width: 500px;
                     height: 350px;
-                    margin-left: 60px;
                     margin-bottom: 20px;
                 }
 
-                .divButtons{
+                .divButtons {
                     display: flex;
                     justify-content: space-evenly;
                     align-items: center;
 
-                    a{
+                    a {
                         background: linear-gradient(-1855deg, var(--StrongCyan), var(--LightCyan));
                         text-decoration: none;
                         display: flex;
                         justify-content: center;
                         align-items: center;
                         color: var(--White-write);
+                        padding: 10px 20px; /* Adiciona algum preenchimento para os botões */
                     }
                 }
             }
 
-            .right{
+            .right {
                 width: 45%;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
 
-                h2{
+                h2 {
                     margin-top: 0px;
                 }
 
-                p{
+                p {
                     color: var(--Cyan-write);
                     font-size: 14px;
                 }
             }
-          }
-      }
-  }
+        }
+    }
+}
