--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -9,7 +9,8 @@ header{
 
     nav{
         width: 100%;
-        background: var(--DarkCyans);
+        background: var(--theme-background); // Altera o fundo da navegação com base no tema
+        color: var(--theme-text);
         
         .header{
             display: flex;
