--- a/src/Footer/styles.module.scss
+++ b/src/Footer/styles.module.scss
@@ -4,7 +4,7 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 300px;
+    height: 400px;
     text-align: center;
   }
 
@@ -19,10 +19,9 @@
     transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
     width: 60%;
     margin: 0 auto;
-    margin-top: 100px;
 
     h2{
-      color: var(--White-write);
+      color: var(--theme-text);
       margin-bottom: 60px;
     }
   }
@@ -66,7 +65,9 @@
     }
   
     h4 {
-      margin-bottom: 5px;
+      margin-top: 15px;
+      margin-bottom: 15px;
+      color: var(--theme-text);
     }
   
     p {
