--- a/src/ModalProjects/styles.module.scss
+++ b/src/ModalProjects/styles.module.scss
@@ -4,7 +4,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: rgba(0, 0, 0, 0.671);
-    z-index: 3000;
+    z-index: 1000;
     width: 100%;
     height: 100vh;
     max-width: 100%; /* Ajuste conforme necessário */
@@ -18,7 +18,7 @@
         background-color: var(--DarkCyans);
         border-radius: 8px;
         width: 80%;
-        padding: 20px;
+        padding: 40px;
         position: relative; /* Necessário para o botão de fechar */
 
         .closeButton {
@@ -45,9 +45,9 @@
                 width: 55%;
                 flex: 1;
 
-                img {
-                    width: 500px;
-                    height: 350px;
+                video {
+                    width: 550px;
+                    height: 300px;
                     margin-bottom: 20px;
                 }
 
@@ -55,6 +55,7 @@
                     display: flex;
                     justify-content: space-evenly;
                     align-items: center;
+                    width: 90%;
 
                     a {
                         background: linear-gradient(-1855deg, var(--StrongCyan), var(--LightCyan));
@@ -63,7 +64,6 @@
                         justify-content: center;
                         align-items: center;
                         color: var(--White-write);
-                        padding: 10px 20px; /* Adiciona algum preenchimento para os botões */
                     }
                 }
             }
@@ -76,6 +76,7 @@
 
                 h2 {
                     margin-top: 0px;
+                    color: var(--theme-text);
                 }
 
                 p {
