--- a/src/components/Portfolio/myProjects/styles.module.scss
+++ b/src/components/Portfolio/myProjects/styles.module.scss
@@ -8,7 +8,7 @@ article {
         
         h3 {
             color: var(--Cyan-write);
-            margin-bottom: 40px;
+            margin-bottom: 50px;
         }
         
         .divImgProject {
@@ -17,6 +17,22 @@ article {
             align-items: center;
             flex-wrap: wrap;
             gap: 40px;
+
+            .prevNextButton {
+                background-color: var(--LightCyan);
+                color: var(--White-write);
+                border: none;
+                cursor: pointer;
+                transition: background-color 0.3s ease;
+                font-size: 32px;
+                border-radius: 10px;
+                width: 25px;
+                height: 50px;
+                
+                &:hover {
+                    background-color: var(--Cyan-write);
+                }
+            }
             
             .skillsImgProject {
                 position: relative;
@@ -25,7 +41,7 @@ article {
                 margin-bottom: 40px;
                 
                 img {
-                    width: 370px;
+                    width: 330px;
                     height: 250px;
                     transition: transform 0.3s ease, filter 0.3s ease;
                     filter: brightness(30%);
@@ -108,26 +124,7 @@ article {
                     cursor: pointer;
                     opacity: 0;
                     transition: opacity 0.3s ease, transform 0.3s ease;
-                }
-            }
-        }
-
-        .navigation {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 20px;
-            
-            button {
-                padding: 10px;
-                background-color: var(--LightCyan);
-                color: var(--White-write);
-                border: none;
-                cursor: pointer;
-                transition: background-color 0.3s ease;
-                font-size: 1.5rem;
-                
-                &:hover {
-                    background-color: var(--Cyan-write);
+                    border-radius: 10px;
                 }
             }
         }
@@ -144,11 +141,12 @@ article {
     .Container_BackEnd {
         width: 85%;
         margin: 0 auto;
-        margin-bottom: 40px;
+        gap: 40px;
         
         h3 {
             color: var(--Cyan-write);
-            margin-bottom: 40px;
+            margin-top: 50px;
+            margin-bottom: 50px;
         }
         
         .divImgProject {
@@ -157,6 +155,22 @@ article {
             align-items: center;
             flex-wrap: wrap;
             gap: 40px;
+
+            .prevNextButton {
+                background-color: var(--LightCyan);
+                color: var(--White-write);
+                border: none;
+                cursor: pointer;
+                transition: background-color 0.3s ease;
+                font-size: 32px;
+                border-radius: 10px;
+                width: 25px;
+                height: 50px;
+                
+                &:hover {
+                    background-color: var(--Cyan-write);
+                }
+            }
             
             .skillsImgProject {
                 position: relative;
@@ -165,7 +179,7 @@ article {
                 margin-bottom: 40px;
                 
                 img {
-                    width: 370px;
+                    width: 320px;
                     height: 250px;
                     transition: transform 0.3s ease, filter 0.3s ease;
                     filter: brightness(30%);
@@ -248,26 +262,6 @@ article {
                     cursor: pointer;
                     opacity: 0;
                     transition: opacity 0.3s ease, transform 0.3s ease;
-                }
-            }
-        }
-        
-        .navigation {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 20px;
-            
-            button {
-                padding: 10px;
-                background-color: var(--LightCyan);
-                color: var(--White-write);
-                border: none;
-                cursor: pointer;
-                transition: background-color 0.3s ease;
-                font-size: 1.5rem;
-                
-                &:hover {
-                    background-color: var(--Cyan-write);
                 }
             }
         }
