--- a/src/components/Portfolio/styles.module.scss
+++ b/src/components/Portfolio/styles.module.scss
@@ -1,10 +1,10 @@
 .portfolio{
     width: 100%;
+    height: 1000px;
 
     h2{
         text-align: center;
-        color: var(--White-write);
-        margin-top: 150px;
-        margin-bottom: 80px;
+        color: var(--theme-text);
+        margin-bottom: 90px;
     }
 }
