--- a/src/components/Skill/styles.module.scss
+++ b/src/components/Skill/styles.module.scss
@@ -1,45 +1,49 @@
 .section {
-    width: 100%;
-  }
-  
+  width: 100%;
+  height: 700px;
+
   .divSectionSkill {
     width: 85%;
+    height: 600px;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 40px;
-  
+
     h2 {
-      color: var(--White-write);
+      color: var(--theme-text);
+      margin-bottom: 40px;
     }
-  
+
     .ulImg {
       display: flex;
       justify-content: center;
+      align-items: center;
       flex-wrap: wrap;
       width: 100%;
       gap: 30px;
       opacity: 0;
       transform: translateX(-50%);
-  
+
       &.show {
         opacity: 1;
         transform: translateX(0%);
         transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
       }
-  
+
       .DivImg {
-        width: 12rem;
-        background: var(--Card-Tecnologies);
+        width: 190px;
+        background: var(--Card-tecnologies);
         display: flex;
         flex-direction: column;
         align-items: center;
+        text-align: center;
         gap: 20px;
         border-bottom: 3px solid var(--LightCyan);
         border-radius: 12px 0 0 0;
         padding: 20px;
-  
+
         p {
           color: var(--LightCyan);
           margin-top: 10px;
@@ -47,15 +51,23 @@
           font-size: 22px;
           font-weight: 500;
         }
-  
+
         .icons {
           width: 40px;
           height: 40px;
           color: var(--LightCyan);
-          transition: transform 0.5s ease-in-out;
-          transform: translateX(50%);
+          transition: transform 0.3s ease-in-out;
+          text-align: center;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          cursor: pointer;
+
+          &:hover {
+            transform: rotate(360deg);
+          }
         }
       }
     }
   }
-  
+}
