--- a/src/ModalProjects/styles.module.scss
+++ b/src/ModalProjects/styles.module.scss
@@ -6,20 +6,25 @@
     background-color: rgba(0, 0, 0, 0.671);
     z-index: 1000;
     width: 100%;
-    height: 100vh;
-    max-width: 100%; /* Ajuste conforme necessário */
- /* Para evitar que o modal exceda a altura da tela */
-    overflow-y: auto; /* Adiciona uma barra de rolagem se o conteúdo for maior que a altura do modal */
+    height: 100%;
+    max-width: 100%; 
+    overflow-y: auto; 
     display: flex;
     justify-content: center;
     align-items: center;
+    
 
     .modalContent {
         background-color: var(--DarkCyans);
         border-radius: 8px;
         width: 80%;
         padding: 40px;
-        position: relative; /* Necessário para o botão de fechar */
+        position: relative;
+
+        @media (max-width: 320px) {
+            width: 100%;
+        }
+
 
         .closeButton {
             position: absolute;
@@ -33,6 +38,20 @@
             background: var(--Cyan-write);
             border-radius: 40px;
             padding: 10px;
+
+            @media (max-width: 320px) {
+                right: 20px;
+                padding: 5px;
+                width: 40px;
+                top: 265px;
+            }
+
+            @media (max-width: 375px) {
+                right: 20px;
+                padding: 5px;
+                width: 40px;
+                top: 205px;
+            }
         }
 
         .modalCenter {
@@ -41,14 +60,35 @@
             align-items: center;
             width: 100%;
 
+            @media (max-width: 320px) {
+                flex-direction: column;
+            }
+
+            @media (max-width: 375px) {
+                flex-direction: column;
+            }
+
             .left {
                 width: 55%;
-                flex: 1;
 
                 video {
                     width: 550px;
                     height: 300px;
                     margin-bottom: 20px;
+
+                    @media (max-width: 320px) {
+                        width: 250px;
+                        height: 220px;
+                        margin-left: -55px;
+                        margin-top: 250px;
+                    }
+
+                    @media (max-width: 375px) {
+                        width: 550px;
+                        height: 300px;
+                        margin-left: -125px;
+                        margin-top: 250px;
+                    }
                 }
 
                 .divButtons {
@@ -57,6 +97,18 @@
                     align-items: center;
                     width: 90%;
 
+                    @media (max-width: 320px) {
+                        flex-direction: column;
+                        gap: 20px;
+                    }
+
+                    @media (max-width: 375px) {
+                        justify-content: space-evenly;
+                        gap: 20px;
+                        width: 500px;
+                        margin-left: -90px;
+                    }
+
                     a {
                         background: linear-gradient(-1855deg, var(--StrongCyan), var(--LightCyan));
                         text-decoration: none;
@@ -64,6 +116,17 @@
                         justify-content: center;
                         align-items: center;
                         color: var(--White-write);
+
+                        @media (max-width: 320px) {
+                            margin-right: -25px;
+                        }
+
+                        @media (max-width: 375px) {
+                            width: 900px;
+                            height: 50px;
+                            font-size: 16px;
+                        }
+
                     }
                 }
             }
@@ -74,14 +137,52 @@
                 flex-direction: column;
                 align-items: center;
 
+                @media (max-width: 320px) {
+                    width: 100%;
+                }
+
+                @media (max-width: 375px) {
+                    width: 100%;
+                }
+
                 h2 {
                     margin-top: 0px;
                     color: var(--theme-text);
+                    
+                    @media (max-width: 320px) {
+                        font-size: 25px;
+                        width: 80%;
+                        margin-top: 40px;
+                        margin-right: -10px;
+                        margin-bottom: 20px;
+                    }
+
+                    @media (max-width: 375px) {
+                        font-size: 25px;
+                        width: 80%;
+                        margin-top: 40px;
+                        margin-right: -10px;
+                        margin-bottom: 20px;
+                    }
                 }
 
                 p {
                     color: var(--Cyan-write);
                     font-size: 14px;
+
+                    @media (max-width: 320px) {
+                        font-size: 12px;
+                        height: 250px;
+                        overflow-y: auto;
+                        text-align: center;
+                    }
+
+                    @media (max-width: 375px) {
+                        font-size: 12px;
+                        height: 250px;
+                        overflow-y: auto;
+                        text-align: center;
+                    }
                 }
             }
         }
