--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -1,58 +1,191 @@
-header{
+header {
     display: flex;
     width: 100%;
     position: fixed;
     top: 0;
-    z-index: 2000;
+    z-index: 2;
     transition: background-color 0.3s ease;
+  
+    nav {
+      width: 100%;
+      background: var(--theme-background);
+      color: var(--theme-text);
+  
+      .header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+        width: 80%;
+        margin: 0 auto;
+  
+        .img {
+          width: 150px;
+          height: 100px;
+          background-color: transparent;
 
-    nav{
-        width: 100%;
-        background: var(--theme-background); // Altera o fundo da navegação com base no tema
-        color: var(--theme-text);
-        
-        .header{
+          @media (max-width: 320px) {
+            width: 40px;
+            height: 70px;
+          }
+          @media (max-width: 375px) {
+            width: 80px;
+            height: 90px;
+          }
+          @media (max-width: 425px) {
+            width: 120px;
+            height: 100px;
+          }
+
+        }
+  
+        .iconContainer {
+          display: flex;
+          align-items: center;
+          gap: 20px;
+  
+          .icone {
+            cursor: pointer;
+            @media (max-width: 320px) {
+                width: 30px;
+                height: 30px;
+              }
+
+              @media (max-width: 375px) {
+                width: 40px;
+                height: 30px;
+              }
+
+              @media (max-width: 425px) {
+                width: 50px;
+                height: 30px;
+              }
+          }
+  
+          .menuButton {
+            background: transparent;
+            border: none;
+            cursor: pointer;
+            color: var(--theme-text);
+            display: block; 
+            justify-content: center;
+            align-items: center;
+
+            @media (max-width: 320px) {
+                width: 10px;
+                height: 37px;
+              }
+          }
+        }
+      }
+  
+      .navMenu {
+        display: none; 
+        justify-content: space-between;
+        align-items: center;
+        list-style: none;
+        gap: 40px;
+        padding: 0;
+
+        .buttonModalLi{
             display: flex;
-            justify-content: space-between;
-            flex-wrap: wrap;
-            width: 80%;
+            justify-content: center;
+            align-items: center;
+            width: 60%;
             margin: 0 auto;
-            
-            
-            .img{
-                width: 150px;
-                height: 100px;
-                background-color: transparent;
-            }
-            
-            ul{
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                list-style: none;
-                gap: 40px;
-    
-                li {
-                    font-family: var(--heading-font);
-                    font-size: 18px;
-                    font-weight: 400;
-                    color: var(--theme-text);
-                    cursor: pointer;
-                }
-    
-                li:hover{
-                    margin-bottom: 5px;
-                    border-bottom: 2px solid var(--theme-text);
-                    transition: 0.2s;
-                }
-            }
-        }
-    
-        .Linha_verde{
-            width: 100%;
-            height: 4px;
-            background: linear-gradient(-1855deg, var(--StrongCyan), var(--LightCyan));
-        }
-    }
-}
+            gap: 80px;
 
+            .menuButton{
+                background: var(--theme-background);
+                color: var(--theme-text);
+                border: none;
+                border-radius: 30px;
+                box-sizing: border-box;
+            }
+
+            .menuButton:hover{
+                background: linear-gradient(-1855deg, var(--StrongCyan), var(--LightCyan));
+            }
+        }
+  
+        li {
+            font-family: var(--heading-font);
+            font-size: 18px;
+            font-weight: 400;
+            color: var(--theme-text);
+            cursor: pointer;
+            transition: transform 0.3s ease, font-size 0.3s ease;
+            box-sizing: border-box; 
+        }
+  
+        li:hover {
+            transform: scale(1.1);
+            font-size: 45px;
+            box-sizing: border-box;
+            color: var(--LightCyan);
+        }
+      }
+  
+      .Linha_verde {
+        width: 100%;
+        height: 4px;
+        background: linear-gradient(-1855deg, var(--StrongCyan), var(--LightCyan));
+      }
+    }
+  }
+  
+  @media (max-width: 1440px) {
+    .navMenu.active {
+      display: flex; 
+      flex-direction: column;
+      position: fixed;
+      z-index: 1;
+      top: 0;
+      right: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.65);
+      backdrop-filter: blur(10px);
+      justify-content: center;
+      align-items: center; 
+      padding-left: 20px; 
+      box-shadow: 2px 0 5px rgb(255, 255, 255, 255);
+      transform: translateX(-100%);
+      transition: transform 1s ease;
+
+      h3{
+        width: 85%;
+        font-size: 30px;
+        text-align: center;
+        margin-bottom: 40px;
+      }
+
+      li{
+          font-size: 32px;
+      }
+  
+      &.active {
+        transform: translateX(0);
+      }
+    }
+
+    @media (max-width: 320px) {
+        .navMenu.active {
+            margin-bottom: 40px;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.65);
+            backdrop-filter: blur(10px);
+
+            h3{
+                width: 85%;
+                font-size: 22px;
+              }
+        
+              li{
+                  font-size: 32px;
+              }
+          }
+
+        }
+  }
+  
