--- a/src/components/Iam.jsx/styles.module.scss
+++ b/src/components/Iam.jsx/styles.module.scss
@@ -1,5 +1,6 @@
 section{
     width: 100%;
+    background-color: var(--theme-background);
     
     .divSection{
         display: flex;
@@ -9,6 +10,26 @@ section{
         height: 600px;
         margin: 0 auto;
         margin-top: 100px;
+
+        @media (max-width: 375px) {
+            flex-direction: column;
+            gap: 30px;
+        }
+
+        @media (max-width: 375px) {
+            flex-direction: column;
+            gap: 30px;
+          }
+          
+          @media (max-width: 425px) {
+            flex-direction: column;
+            gap: 30px;
+          }
+          
+          @media (max-width: 768px) {
+            flex-direction: column;
+            gap: 30px;
+          }
     
         .DivMe{
             display: flex;
@@ -18,6 +39,18 @@ section{
 
             #paragraphy{
                 color: var(--theme-text);
+
+                @media (max-width: 375px) {
+                    margin-top: 60px;
+                }
+
+                @media (max-width: 425px) {
+                    margin-top: 60px;
+                }
+
+                @media (max-width: 768px) {
+                    margin-top: 60px;
+                }
             }
 
             #title1{
@@ -61,5 +94,28 @@ section{
             margin-top: 2rem;
         }
     }
-}
 
+    @media (max-width: 320px) {
+        .divSection {
+          flex-direction: column; 
+          align-items: center;
+          margin-top: 200px;
+
+          .DivMe{
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            width: 70%;
+
+            .divButtons{
+                flex-direction: column;
+            }
+          }
+        }
+    
+        img {
+          width: 320px;
+          height: 360px;
+        }
+        }
+}   
