--- a/src/components/Portfolio/myProjects/styles.module.scss
+++ b/src/components/Portfolio/myProjects/styles.module.scss
@@ -1,4 +1,21 @@
 article {
+    width: 100%;
+    
+    @media (max-width: 320px) {
+        height: auto;
+    }
+
+    @media (max-width: 375px) {
+        height: auto;
+      }
+      
+      @media (max-width: 425px) {
+        height: auto;
+      }
+      
+      @media (max-width: 768px) {
+        height: auto;
+      }
     
     .Container_FrontEnd {
         width: 85%;
@@ -15,23 +32,59 @@ article {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            flex-wrap: wrap;
             gap: 40px;
+            width: 60%;
+            margin: 0 auto;
+
+            @media (max-width: 320px) {
+                width: 100%;
+                gap: 5px;
+            }
+
+            @media (max-width: 375px) {
+                width: 100%;
+                gap: 5px;
+            }
+
+            @media (max-width: 425px) {
+                width: 100%;
+                gap: 5px;
+            }
+
+            @media (max-width: 768px) {
+                width: 100%;
+                gap: 5px;
+            }
 
             .prevNextButton {
-                background-color: var(--LightCyan);
-                color: var(--White-write);
+                background-color: transparent;
+                color: var(--LightCyan);
                 border: none;
                 cursor: pointer;
                 transition: background-color 0.3s ease;
-                font-size: 32px;
-                border-radius: 10px;
-                width: 25px;
-                height: 50px;
+                font-size: 160px;
+                margin-bottom: 50px;
                 
                 &:hover {
-                    background-color: var(--Cyan-write);
+                    color: var(--Cyan-write);
                 }
+
+                @media (max-width: 320px) {
+                    font-size: 100px;
+                }
+
+                @media (max-width: 375px) {
+                    font-size: 100px;
+                }
+
+                @media (max-width: 425px) {
+                    font-size: 100px;
+                }
+
+                @media (max-width: 768px) {
+                    font-size: 100px;
+                }
+
             }
             
             .skillsImgProject {
@@ -39,17 +92,53 @@ article {
                 display: inline-block;
                 overflow: hidden;
                 margin-bottom: 40px;
+
+                @media (max-width: 320px) {
+                    width: 100%;
+                }
+
+                @media (max-width: 375px) {
+                    width: 100%;
+                }
+
+                @media (max-width: 425px) {
+                    width: 100%;
+                }
+
+                @media (max-width: 768px) {
+                    width: 100%;
+                }
                 
                 img {
-                    width: 330px;
-                    height: 250px;
+                    width: 530px;
+                    height: 350px;
                     transition: transform 0.3s ease, filter 0.3s ease;
-                    filter: brightness(30%);
+                    filter: brightness(10%);
+
+                    @media (max-width: 320px) {
+                        width: 100%;
+                        height: 200px;
+                    }
+
+                    @media (max-width: 375px) {
+                        width: 100%;
+                        height: 200px;
+                    }
+
+                    @media (max-width: 425px) {
+                        width: 100%;
+                        height: 200px;
+                    }
+
+                    @media (max-width: 768px) {
+                        width: 100%;
+                        height: 200px;
+                    }
                 }
                 
                 &:hover img {
-                    transform: scale(1.1);
-                    filter: brightness(100%);
+                    transform: scale(1.0);
+                    filter: brightness(40%);
                 }
                 
                 .descriptionProjects {
@@ -77,6 +166,23 @@ article {
                         color: var(--White-write);
                         font-weight: 600;
                         margin-top: 10px;
+                        font-size: 45px;
+
+                        @media (max-width: 320px) {
+                            font-size: 20px;
+                        }
+
+                        @media (max-width: 375px) {
+                            font-size: 22px;
+                        }
+
+                        @media (max-width: 425px) {
+                            font-size: 24px;
+                        }
+
+                        @media (max-width: 768px) {
+                            font-size: 26px;
+                        }
                     }
                     
                     .iconsProjects {
@@ -88,9 +194,29 @@ article {
                         color: var(--LightCyan);
                         
                         .i {
-                            width: 30px;
-                            height: 30px;
+                            width: 80px;
+                            height: 50px;
                             font-weight: 600;
+
+                            @media (max-width: 320px) {
+                                width: 30px;
+                                height: 30px;
+                            }
+
+                            @media (max-width: 375px) {
+                                width: 30px;
+                                height: 30px;
+                            }
+
+                            @media (max-width: 425px) {
+                                width: 30px;
+                                height: 30px;
+                            }
+
+                            @media (max-width: 768px) {
+                                width: 40px;
+                                height: 40px;
+                            }
                         }
                     }
                 }
@@ -114,17 +240,52 @@ article {
                 
                 .hidden_button {
                     position: absolute;
-                    bottom: 20px;
-                    left: 38%;
+                    bottom: 50px;
+                    left: 35%;
                     transform: translateX(-50%);
                     padding: 10px 20px;
-                    background-color: var(--LightCyan);
+                    background: linear-gradient(-1855deg, var(--StrongCyan), var(--LightCyan));;
                     color: var(--White-write);
                     border: none;
                     cursor: pointer;
                     opacity: 0;
-                    transition: opacity 0.3s ease, transform 0.3s ease;
+                    transition: opacity 0.5s ease, transform 0.5s ease;
                     border-radius: 10px;
+                    width: 150px;
+                    height: 60px;
+                    font-size: 28px;
+
+                    @media (max-width: 320px) {
+                        font-size: 14px;
+                        width: 100px;
+                        left: -25%;
+                        margin-right: -90px;
+                    }
+
+                    @media (max-width: 375px) {
+                        font-size: 14px;
+                        width: 100px;
+                        bottom: 10px;
+                        right: 50px;
+
+                    }
+
+                    @media (max-width: 425px) {
+                        font-size: 14px;
+                        width: 100px;
+                        height: 40px;
+                        bottom: 0;
+                        left: 25%;
+                        margin-left: 17px;
+                    }
+
+                    @media (max-width: 768px) {
+                        font-size: 14px;
+                        height: 40px;
+                        bottom: 0;
+                        left: 25%;
+                        margin-left: 60px;
+                    }
                 }
             }
         }
@@ -153,22 +314,41 @@ article {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            flex-wrap: wrap;
             gap: 40px;
+            width: 60%;
+            margin: 0 auto;
+
+            @media (max-width: 320px) {
+                width: 100%;
+                gap: 5px;
+            }
+
+            @media (max-width: 375px) {
+                width: 100%;
+                gap: 5px;
+            }
+
+            @media (max-width: 425px) {
+                width: 100%;
+                gap: 5px;
+            }
+
+            @media (max-width: 768px) {
+                width: 100%;
+                gap: 5px;
+            }
 
             .prevNextButton {
-                background-color: var(--LightCyan);
-                color: var(--White-write);
+                background-color: transparent;
+                color: var(--LightCyan);
                 border: none;
                 cursor: pointer;
                 transition: background-color 0.3s ease;
-                font-size: 32px;
-                border-radius: 10px;
-                width: 25px;
-                height: 50px;
+                font-size: 160px;
+                margin-bottom: 50px;
                 
                 &:hover {
-                    background-color: var(--Cyan-write);
+                    color: var(--Cyan-write);
                 }
             }
             
@@ -177,17 +357,26 @@ article {
                 display: inline-block;
                 overflow: hidden;
                 margin-bottom: 40px;
+
+                @media (max-width: 320px) {
+                    width: 100%;
+                }
                 
                 img {
-                    width: 320px;
-                    height: 250px;
+                    width: 530px;
+                    height: 350px;
                     transition: transform 0.3s ease, filter 0.3s ease;
-                    filter: brightness(30%);
+                    filter: brightness(10%);
+
+                    @media (max-width: 320px) {
+                        width: 100%;
+                        height: 200px;
+                    }
                 }
                 
                 &:hover img {
-                    transform: scale(1.1);
-                    filter: brightness(100%);
+                    transform: scale(1.0);
+                    filter: brightness(40%);
                 }
                 
                 .descriptionProjects {
@@ -252,8 +441,8 @@ article {
                 
                 .hidden_button {
                     position: absolute;
-                    bottom: 20px;
-                    left: 38%;
+                    bottom: 50px;
+                    left: 35%;
                     transform: translateX(-50%);
                     padding: 10px 20px;
                     background-color: var(--LightCyan);
@@ -262,9 +451,12 @@ article {
                     cursor: pointer;
                     opacity: 0;
                     transition: opacity 0.3s ease, transform 0.3s ease;
+                    border-radius: 10px;
+                    width: 150px;
+                    height: 60px;
+                    font-size: 28px;
                 }
             }
         }
     }
-    
-}
+} 
