--- a/src/components/Portfolio/styles.module.scss
+++ b/src/components/Portfolio/styles.module.scss
@@ -2,9 +2,45 @@
     width: 100%;
     height: 1000px;
 
+    @media (max-width: 320px) {
+        height: auto;
+        margin-bottom: 150px;
+    }
+
+    @media (max-width: 375px) {
+        height: auto;
+        margin-bottom: 150px;
+      }
+      
+      @media (max-width: 425px) {
+        height: auto;
+        margin-bottom: 150px;
+      }
+      
+      @media (max-width: 768px) {
+        height: auto;
+        margin-bottom: 150px;
+      }
+
     h2{
         text-align: center;
         color: var(--theme-text);
         margin-bottom: 90px;
+
+        @media (max-width: 320px) {
+            margin-top: 1500px;
+        }
+
+        @media (max-width: 375px) {
+            margin-top: 1500px;
+          }
+          
+          @media (max-width: 425px) {
+            margin-top: 1500px;
+          }
+          
+          @media (max-width: 768px) {
+            margin-top: 1500px;
+          }
     }
 }
