--- a/src/components/Skill/styles.module.scss
+++ b/src/components/Skill/styles.module.scss
@@ -2,6 +2,22 @@
   width: 100%;
   height: 700px;
 
+@media (max-width: 320px) {
+    height: auto;
+}
+
+@media (max-width: 375px) {
+  height: auto;
+}
+
+@media (max-width: 425px) {
+  height: auto;
+}
+
+@media (max-width: 768px) {
+  height: auto;
+}
+
   .divSectionSkill {
     width: 85%;
     height: 600px;
@@ -29,7 +45,7 @@
       &.show {
         opacity: 1;
         transform: translateX(0%);
-        transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+        transition: opacity 1s ease-in-out, transform 1s ease-in-out;
       }
 
       .DivImg {
