--- a/src/components/Portfolio/myProjects/styles.module.scss
+++ b/src/components/Portfolio/myProjects/styles.module.scss
@@ -104,6 +104,8 @@ article {
                 display: inline-block;
                 overflow: hidden;
                 margin-bottom: 40px;
+                width: 530px;
+                background-color: aqua;
                 
                 img {
                     width: 530px;
